// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with 1 expense 1`] = `
<div>
  <p>
    Viewing 
    1
     expense totalling 
    $3.43
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $57.12
  </p>
</div>
`;